Add Windows ProcessListener
Check the version of operating system, and implement Windows version of ProcessListener.